<resources>
    <string name="app_title_teaser">Mapbox Vision Teaser</string>

    <string name="calibration_progress">Calibration: %d%%</string>
    <string name="segmentation">Segmentation</string>
    <string name="lane_detection">Lane Detection</string>
    <string name="object_mapping">Object Mapping</string>
    <string name="safety_mode">Safety Mode</string>
    <string name="signs_detection">Signs Detection</string>
    <string name="object_detection">Object Detection</string>
    <string name="ar_navigation">AR Routing</string>
    <string name="driver_score">Driver Score</string>
    <string name="go">Go</string>
    <string name="tap_to_select_destination">Tap on the map to select a destination</string>
    <string name="can_not_calculate_new_route">Cannot calculate new route</string>
    <string name="replay_mode">Replay mode</string>
    <string name="start_ar_session">Start AR Session</string>
    <string name="vision_not_supported_title">Device is not supported</string>
    <string name="vision_not_supported_message">Vision SDK does not support this device yet, check more details at &lt;a href=\"https://docs.mapbox.com/android/vision/overview/#requirements\">docs.mapbox.com&lt;/a></string>
    <string name="select_session_source">Select source</string>
    <string name="select_all">Select all</string>
    <string name="camera_text">Camera</string>
    <string name="done_text">Done</string>
    <string name="stop_record">STOP REC</string>
    <string name="replay_mode_no_sessions_title">There are no any videos to replay</string>
    <string name="replay_mode_no_sessions_description">You can record them using built-in recorder or upload it via OS</string>

    <plurals name="selected_items">
        <item quantity="one">%d item</item>
        <item quantity="other">%d items</item>
    </plurals>

    <string name="permissions_missing_title">Missing permissions</string>
    <string name="permissions_missing_message">The following permissions were not granted, please restart the application : %s</string>
    <string name="request_permissions">Request permissions</string>

</resources>
