<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_70_opacity">

    <ImageView
        android:id="@+id/back_button"
        android:src="@drawable/ic_back"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/BackButtonStyle"/>

    <TextView
        android:id="@+id/select_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:fontFamily="sans-serif"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"
        android:layout_marginStart="18dp"
        android:text="@string/select_all"
        android:background="@drawable/bcg_oval_black_radius_50"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <FrameLayout
        android:id="@+id/right_top_icon_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/record_session"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="18dp"
            android:src="@drawable/ic_camera_record_session"
            android:visibility="visible" />

        <TextView
            android:id="@+id/done_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:fontFamily="sans-serif"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="18dp"
            android:text="@string/done_text"
            android:background="@drawable/bcg_oval_blue_radius_50"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    </FrameLayout>

    <ImageView
        android:id="@+id/edit_sessions_list"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_marginEnd="18dp"
        android:layout_marginTop="18dp"
        android:src="@drawable/ic_edit"
        android:visibility="visible"
        app:layout_constraintEnd_toStartOf="@id/right_top_icon_layout"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/delete_sessions"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_marginEnd="18dp"
        android:layout_marginTop="18dp"
        android:src="@drawable/ic_trash"
        android:visibility="gone"
        app:layout_constraintEnd_toStartOf="@id/right_top_icon_layout"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/replay_fragment_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:fontFamily="sans-serif"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_marginTop="28dp"
        android:text="@string/select_session_source"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh_sessions"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="150dp"
        android:layout_marginStart="150dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.recyclerview.widget.RecyclerView
            android:paddingTop="20dp"
            android:id="@+id/recycler_sessions"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:scrollbars="vertical"
            android:scrollbarThumbVertical="@color/white_70_opacity"/>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <TextView
        android:id="@+id/no_sessions_title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:lineSpacingExtra="7sp"
        android:text="@string/replay_mode_no_sessions_title"
        android:layout_marginBottom="13dp"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintBottom_toTopOf="@id/no_sessions_description_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/no_sessions_description_text"
        android:layout_width="440dp"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:lineSpacingExtra="9sp"
        android:gravity="center_horizontal"
        android:text="@string/replay_mode_no_sessions_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/no_sessions_title_text"/>

</androidx.constraintlayout.widget.ConstraintLayout>
